# ai-expense-tracker

./: README.md  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni.c  native-lib.cpp
app/src/main/java/com/example/aiexpensetracker/: BootReceiver.kt  MainActivity.kt  TrackerService.kt  WhisperLib.kt  WhisperNative.kt
app/src/main/java/com/example/aiexpensetracker/ui/theme/: Theme.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
